gcc/fortran/intrinsic.c
@@ -600,35 +600,6 @@ static void add_sym_4s (const char *name, int elemental, int actual_ok,
 }
 
 
-static void add_sym_5 (const char *name, int elemental, int actual_ok, bt type,
-		       int kind,
-		       try (*check)(gfc_expr *,gfc_expr *,gfc_expr *,gfc_expr *,gfc_expr *),
-		       gfc_expr *(*simplify)(gfc_expr *,gfc_expr *,gfc_expr *,gfc_expr *,gfc_expr *),
-		       void (*resolve)(gfc_expr *,gfc_expr *,gfc_expr *,gfc_expr *,gfc_expr *,gfc_expr *),
-		       const char* a1, bt type1, int kind1, int optional1,
-		       const char* a2, bt type2, int kind2, int optional2,
-		       const char* a3, bt type3, int kind3, int optional3,
-		       const char* a4, bt type4, int kind4, int optional4,
-		       const char* a5, bt type5, int kind5, int optional5
-		       ) {
-  gfc_check_f cf;
-  gfc_simplify_f sf;
-  gfc_resolve_f rf;
-
-  cf.f5 = check;
-  sf.f5 = simplify;
-  rf.f5 = resolve;
-
-  add_sym (name, elemental, actual_ok, type, kind, cf, sf, rf,
-	   a1, type1, kind1, optional1,
-	   a2, type2, kind2, optional2,
-	   a3, type3, kind3, optional3,
-	   a4, type4, kind4, optional4,
-	   a5, type5, kind5, optional5,
-	   (void*)0);
-}
-
-
 static void add_sym_5s  
 (
  const char *name, int elemental, int actual_ok, bt type, int kind,
@@ -1960,12 +1931,11 @@ add_subroutines (void)
 	     trim_name, BT_LOGICAL, dl, 1);
 
 
-  /* This needs changing to add_sym_5s if it gets a resolution function.  */
-  add_sym_5 ("mvbits", 1, 1, BT_UNKNOWN, 0,
-	     gfc_check_mvbits, gfc_simplify_mvbits, NULL,
-	     f, BT_INTEGER, di, 0, fp, BT_INTEGER, di, 0,
-	     ln, BT_INTEGER, di, 0, t, BT_INTEGER, di, 0,
-	     tp, BT_INTEGER, di, 0);
+  add_sym_5s ("mvbits", 1, 1, BT_UNKNOWN, 0,
+	      gfc_check_mvbits, gfc_simplify_mvbits, gfc_resolve_mvbits,
+	      f, BT_INTEGER, di, 0, fp, BT_INTEGER, di, 0,
+	      ln, BT_INTEGER, di, 0, t, BT_INTEGER, di, 0,
+	      tp, BT_INTEGER, di, 0);
 
   add_sym_1s ("random_number", 0, 1, BT_UNKNOWN, 0,
 	      gfc_check_random_number, NULL, gfc_resolve_random_number,
